syntax = "proto3";
package studentservice;

import "google/protobuf/empty.proto";
import "student.proto";

option java_multiple_files = true;
option java_outer_classname = "StudentServiceProtos";
option java_package = "com.grpc.student.service";

message StudentIdRequest {
    string id = 1;
}

message StudentAgeRequest {
    int32 age = 1;
}

message StudentResponse {
    Student student = 1;
}

message StudentsResponse {
    repeated Student students = 1;
}

service StudentService {
    rpc GetStudentById(StudentIdRequest) returns (StudentResponse);
    rpc FindStudentsByAge(StudentAgeRequest) returns (StudentsResponse);
    rpc FindAllStudent(google.protobuf.Empty) returns (StudentsResponse);
    rpc FindStudentByStatusStream(stream StudentStatusRequest) returns (stream Student);
};